# Waiter-server

./: .gitignore  Cargo.toml  README.md  build-qnap.sh  pubspec.yaml  sqlx-data.json
lib/: Authentication.dart  Error.dart  IdempotencyCache.dart  ResponseJson.dart  SubjectFilter.dart  Waiter.dart  authentication.dart  error.dart  handler.dart  jsonresponse.dart
lib/middleware/: Authentication.dart  IdempotencyCache.dart  SubjectFilter.dart
lib/middleware/IdempotencyCache/: Actor.dart  IdempotencyCache.dart
migrations/: 20200923092851_create_orders.sql  20200923092904_create_product_list.sql  20201006071230_create_cart_relationship.sql  20201021211653_cart_relationship_trigger.sql  20201205072019_add_owner_name_field_to_Orders_table.sql  20210425174131_add_term_column_to_Order_table.sql  20210425211715_add_status_column_to_Order_table.sql
migrations/2020-09-21-152929_create_orders/: up.sql
migrations/2020-09-22-141811_create_product_list/: up.sql
src/: database.rs  error.rs  main.rs  model.rs  pointer.rs  signals.rs  test.rs
src/api/: auth.rs  cache.rs  menu.rs  mod.rs  order.rs
src/api/menu/: mod.rs
src/api/order/: mod.rs
src/middleware/: auth.rs  cache.rs  filter.rs  mod.rs
src/middleware/auth/: mod.rs  service.rs
src/model/: mod.rs  test.rs
src/test/: integration.rs  menu.rs  mod.rs  orders.rs
