[package]
name = "Waiter"
version = "0.1.1"
authors = ["quq <quq@magisystem.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~3.0.2"
actix-service = "*"
actix-rt = "*"
actix-cors = "^0.5.3"
dotenv = "^0.15.0"
simple_logger = "~1.9.0"
futures = "*"
jwt = "^0.11.0"
hmac = "*"
sha2 = "*"
dashmap = "~3.11.10"
serde = "*"
log = "*"
derive-getters = "^0.2.0"
base64-stream = "~1.2.5"

[dependencies.sqlx]
version="^0.4.2"
default-features=false
features=[
	"macros",
	"migrate",
	"runtime-actix-rustls",
	"mysql",
	"json",
	"chrono",
	"offline"
]

[dev-dependencies]
actix-rt = "*"
serde_json = "*"
dotenv_codegen = "0.15.0"
